Bug 405456 - Search for custom header fails with inconclusive error message
Summary: Search for custom header fails with inconclusive error message
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: search (other bugs)
Version First Reported In: 5.7.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-13 22:25 UTC by quazgar
Modified: 2019-03-14 12:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.11.0
Sentry Crash Report:


Attachments
Screenshot of the error message (47.92 KB, image/png)
2019-03-13 22:25 UTC, quazgar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description quazgar 2019-03-13 22:25:57 UTC
Created attachment 118787 [details]
Screenshot of the error message

# SUMMARY

Trying to search (with "s") for a custom header field fails with an error message. 

# STEPS TO REPRODUCE
1. Open search dialog (see screenshot).
2. In the "Choose or type..." field, enter your desired header, e.g. "X-MyHeaderField".
3. In the value field, enter your desired value.
4. Press "Search" button

# OBSERVED RESULT
An error message appears: "Search failed some errors were found: 
You forgot to add conditions."

# EXPECTED RESULT
Search for messages with the expected condition.

# SOFTWARE/OS VERSIONS
Distro: Ubuntu 18.04.2 LTS
Qt: 5.9.5
KDE: 5.44.0

# ADDITIONAL INFORMATION
This would be a workaround for me until bug #283020 is implemented.
Comment 1 Laurent Montel 2019-03-14 12:19:24 UTC
I confirm it.
Comment 2 Laurent Montel 2019-03-14 12:39:35 UTC
Git commit 67eb99baa8fbb69ee23b040ee5247799f46a52f9 by Laurent Montel.
Committed on 14/03/2019 at 12:39.
Pushed by mlaurent into branch 'master'.

FIX Bug 405456 - Search for custom header fails with inconclusive error message
FIXED-IN: 5.11.0

M  +2    -0    src/search/searchrule/searchrulestring.cpp

https://commits.kde.org/mailcommon/67eb99baa8fbb69ee23b040ee5247799f46a52f9