FIX Bug 405456 - Search for custom header fails with inconclusive error message

BUG: 405456
FIXED-IN: 5.11.0